--- a/global.css
+++ b/global.css
@@ -23,14 +23,7 @@ ul li{
     flex: 1;
 
 }
-@media only screen and (max-width: 800px) {
-    .calculatorapp{
-    flex-direction: column;
-    justify-content: space-around;
-    width: fit-content;
-}
-    
-}
+
 .calculatorapp button,input{
     padding: 20px;
     background-color: transparent;
@@ -50,4 +43,18 @@ ul li{
  border: 20px solid violet;
  width: fit-content;
 
+}
+@media only screen and (max-width: 800px) {
+    .calculatorapp{
+    flex-direction: column;
+    justify-content: space-around;
+    width: fit-content;
+}
+    .calculatorapp input{
+    border: none;
+    outline: none;
+    width: 100px;
+    border-bottom: 1px solid black;
+}
+    
 }
